Support For Small Screens

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Agma</title>
         <meta name="description" content="Agma Oregnal Xyodor's Site">
         <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="style/res.css">
     </head>
     <body>
         <main>
@@ -15,13 +16,13 @@
                 </div>
 
                 <div class="row">
-                    <input type="text" id="url">
+                    <input type="text" id="url" placeholder="Enter a profile url">
                     <button id="search">Get</button>
                     <div class="clear"></div>
                 </div>
                 <div class="row">
                     <div class="image">
-                        <img id="imageElement" src="images/2.jpg">
+                        <img id="imageElement" src="">
                     </div>
                 </div>
             </div>
