--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Agma</title>
         <meta name="description" content="Agma Oregnal Xyodor's Site">
         <link rel="stylesheet" href="style/style.css">
